<resources>
    <string name="app_name">BlockchainVPN</string>
    <string name="vpn_title_step_1">Автоматическое подключение</string>
    <string name="vpn_title_step_2">Анонимность\n в сети</string>
    <string name="vpn_title_step_3">Почувствуй\nвсе преимущества</string>
    <string name="vpn_description_step_1">Теперь не нужно каждый раз нажимать кнопку подключения VPN\n\nНастрой автоматическое подключение для тех приложений которыми ты обычно пользуешься и больше не думать отключен ли vpn на твоем устройстве.</string>
    <string name="vpn_description_step_2">Не оставляет никаких следов и защищает конфиденциальные данные\n\nТеперь никто не узнает где вы были и что делали.</string>
    <string name="vpn_description_step_3">&lt;font color=\"#6747CE\">\u2726&lt;/font>  Автоматизация&lt;br>&lt;font color=\"#6747CE\">\u2726&lt;/font>  Самые быстрые соединения&lt;br>&lt;font color=\"#6747CE\">\u2726&lt;/font>  Трафик без ограничений</string>
    <string name="next_time">В другой раз</string>
    <string name="try_it">Попробовать&lt;br>&lt;font color=\"#E474FF\">Бесплатный период 3 дня&lt;/font></string>
    <string name="got_it">Понятно</string>
    <string name="press_yes">Жми \"Да\" если хочешь забыть про это,\nНо продолжать пользоваться любимыми\nприложениями</string>
    <string name="how_to_control_carousel">\u27f7\nСвайпай влево или вправо, чтобы выбрать пункт в карусели</string>
    <string name="privacy">Приватность</string>
    <string name="privacy_condition">Тут длинный текст с условиями конфиденциальности.\n\nCейчас разместила текст для наполнения.\n\nВ частности, консультация с широким активом требует определения и уточнения экономической целесообразности принимаемых решений. Есть над чем задуматься: диаграммы связей, вне зависимости от их уровня, должны быть обнародованы.\n\nКстати,  сторонники тоталитаризма в науке, которые представляютсобой яркий пример континентально-европейского типа политической культуры, будут ассоциативно распределены по отраслям.\n\nКаждый из нас понимает очевидную вещь: постоянное информационно-пропагандистское обеспечение нашейдеятельности способствует повышению качества экономической целесообразности принимаемых решений. Мы вынуждены отталкиваться от того, что семантический разбор внешних противодействий напрямую зависит от форм воздействия.</string>
    <string name="agreement">Нажимая кнопку Принимаю, вы соглашаетесь с нашей политикой Конфиденциальности</string>
    <string name="accept">Принимаю</string>
</resources>